--- a/share/syscons/scrnmaps/Makefile
+++ b/share/syscons/scrnmaps/Makefile
@@ -1,28 +1,19 @@
 # $FreeBSD: src/share/syscons/scrnmaps/Makefile,v 1.14.2.3 2002/08/07 16:31:52 ru Exp $
 
-SCRMAPS = iso-8859-1_to_cp437.scm iso-8859-4_for_vga9.scm \
-	  iso-8859-7_to_cp437.scm \
-	  koi8-r2cp866.scm koi8-u2cp866u.scm \
-	  us-ascii_to_cp437.scm
+# SCRMAPS
+.include "./Makefile.scrnmaps"
 
-SCRMAPS_MK = ${SCRMAPS:R:S/$/.mk/g}
 SCRDIR = ${SHAREDIR}/syscons/scrnmaps
-CLEANFILES+= ${SCRMAPS_MK} ${SCRMAPS}
+CLEANFILES+= ${SCRMAPS}
 
 NOMAN = noman
 
 FILES=		${SCRMAPS}
 FILESDIR=	${SCRDIR}
 
-build-tools: ${SCRMAPS_MK}
-
-${SCRMAPS}: ${.TARGET:R}.mk
-	./${.TARGET:R}.mk ${.TARGET:R}.tmp
+${SCRMAPS}: ${.TARGET:R} mkscrfil.c
+	${.OBJDIR}/../mapsmk/${.TARGET:R}.nx ${.TARGET:R}.tmp
 	uuencode ${.TARGET:R}.tmp ${.TARGET:R} > ${.TARGET}
 	rm -f ${.TARGET:R}.tmp
-
-${SCRMAPS_MK}: ${.TARGET:R} mkscrfil.c
-	${NXCC} ${NXCFLAGS} -I${.CURDIR} -DFIL=\"${.TARGET:R}\" ${NXLDFLAGS} \
-	    -o ${.TARGET} ${.CURDIR}/mkscrfil.c
 
 .include <bsd.prog.mk>
